# SomeCMakeMagic

./: README.md  SomeCMakeMagic.cmake
examples/: README.md
examples/hello_world/: CMakeLists.txt  README.md  hello_world.cpp  hello_world.hpp
examples/scripts/: base.sh  build-all  build-example  clean-all  clean-example  test-all  test-example
